--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "prettier": "3.3.3"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
